srv/grafana/Ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: tectonic
spec:
  tls:
    - hosts:
        - grafana.sj.ifsc.edu.br
      secretName: tls-ifsc-sje
  rules:
    - host: grafana.sj.ifsc.edu.br
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana-grafana
              servicePort: 80
status:
  loadBalancer:
    ingress:
      - ip: 191.36.8.24
      - ip: 191.36.8.25
